fixed alignment

--- a/src/components/Chat/Chat.css
+++ b/src/components/Chat/Chat.css
@@ -7,6 +7,7 @@
   position: fixed;
   z-index: 100;
   cursor: pointer;
+  position: absolute;
 }
 .chat {
   color: #ffffff;
